# qt-qml-series

./: .gitignore  CMakeLists.txt  CardItem.qml  HighLights.qml  Main.qml  README.md  SearchField.qml  SerieInfo.qml  SeriesSearch.cpp  SeriesSearch.h  animal.cpp  main.cpp  model.h  tvseries.cpp  tvseries.h  view.qml
